[gd_scene load_steps=10 format=3 uid="uid://byc3q31dfxkfl"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_jyobo"]
[ext_resource type="Resource" uid="uid://56om27nhd85w" path="res://resources/player_stats.tres" id="2_r3ti7"]
[ext_resource type="Texture2D" uid="uid://c16j0qlrornq7" path="res://scenes/player/dg2kcv3-c10a0bcc-f58a-488d-ba93-6fc6ec166b02.png" id="3_cudxj"]
[ext_resource type="Texture2D" uid="uid://bba24imwcqw6x" path="res://icon.svg" id="3_wtwyb"]
[ext_resource type="Script" path="res://scenes/player/CameraFlash.gd" id="5_dc4ra"]

[sub_resource type="SpriteFrames" id="SpriteFrames_0jpyx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_wtwyb")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ltp45"]
radius = 65.0

[sub_resource type="Animation" id="Animation_6gm1p"]
resource_name = "dash"
length = 0.1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"set_invincible"
}, {
"args": [false],
"method": &"set_invincible"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"finish_dash"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.52549), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j5idc"]
_data = {
"dash": SubResource("Animation_6gm1p")
}

[node name="Player" type="CharacterBody2D"]
collision_mask = 5
script = ExtResource("1_jyobo")
dash_velocity_multiplier = 4.0
player_stats = ExtResource("2_r3ti7")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.015, 0.015)
texture = ExtResource("3_cudxj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
scale = Vector2(0.125, 0.125)
sprite_frames = SubResource("SpriteFrames_0jpyx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.125, 0.125)
shape = SubResource("CircleShape2D_ltp45")

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2(0.125, 0.125)
zoom = Vector2(3, 3)
limit_left = -100
limit_top = -100
limit_right = 860
limit_bottom = 480
limit_smoothed = true

[node name="LunchProgressBar" type="ProgressBar" parent="."]
visible = false
offset_left = -12.0
offset_top = 11.0
offset_right = 83.0
offset_bottom = 38.0
scale = Vector2(0.26, 0.26)

[node name="EatProgressBar" type="ProgressBar" parent="."]
modulate = Color(0, 1, 0.301961, 1)
offset_left = -12.0
offset_top = -26.0
offset_right = 83.0
offset_bottom = 26.0
scale = Vector2(0.26, 0.26)

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -17.0
offset_top = 20.0
offset_right = 202.0
offset_bottom = 69.0
scale = Vector2(0.16, 0.16)
text = "Hold E/X to eat
(DUMMY IMPLEMENTATION)"
horizontal_alignment = 1

[node name="InvincibilityTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="DashCooldownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_j5idc")
}

[node name="CameraFlash" type="Polygon2D" parent="."]
modulate = Color(1, 1, 1, 0)
polygon = PackedVector2Array(-200, -200, 200, -200, 200, 200, -200, 200)
script = ExtResource("5_dc4ra")

[connection signal="camera_taking" from="." to="CameraFlash" method="_on_player_camera_taking"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_invincibility_timer_timeout"]
[connection signal="timeout" from="DashCooldownTimer" to="." method="_on_dash_cooldown_timer_timeout"]
